Add k8s Manifest files

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: wisecow.local
+  - host: wiscow.local
     http:
       paths:
       - path: /
